@@ -166,7 +166,7 @@ class MapperInvokeForAnn implements IMapperInvoke {
                 //
                 Class<?> rst_clz2 = (Class<?>)rst_type2;
                 if (IBinder.class.isAssignableFrom(rst_clz2)) {
-                    return sp.getList((IBinder) rst_clz2.newInstance());
+                    return sp.getList((IBinder) rst_clz2.getDeclaredConstructor().newInstance());
                 } else {
                     return sp.getList(rst_clz2);
                 }
@@ -184,7 +184,7 @@ class MapperInvokeForAnn implements IMapperInvoke {
         //是单实体
         if (rst_type_str.startsWith("java") == false && rst_type_str.indexOf(".") > 0) {
             if (IBinder.class.isAssignableFrom(rst_type)) {
-                return sp.getItem((IBinder) rst_type.newInstance());
+                return sp.getItem((IBinder) rst_type.getDeclaredConstructor().newInstance());
             } else {
                 return sp.getItem(rst_type);
             }
